Changes to build universal binary and support 10.5, ppc

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,10 @@
 build
 DerivedData
+.DS_Store
+FlashbackChecker.xcodeproj/jils.pbxuser
+
+FlashbackChecker.xcodeproj/jils.perspectivev3
+
+FlashbackChecker.xcodeproj/project.xcworkspace/xcuserdata/jils.xcuserdatad/UserInterfaceState.xcuserstate
+
+FlashbackChecker.xcodeproj/xcuserdata/jils.xcuserdatad/xcschemes/FlashBackChecker.xcscheme
